# evas-pub

./: pyproject.toml
evas_pub/: academic.py  enem.py  enrolled.py  linkage.py  utils.py
