[tool.poetry]
name = "evas-pub"
version = "0.1.0"
description = ""
authors = ["Silas Genário <sg.lopes26@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
dask = "^2022.4.0"
Unidecode = "^1.3.4"
xlrd = "^2.0.1"
openpyxl = "^3.0.9"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
